# ebm-molecules

./: .gitignore  LICENSE  MNIST_cli.py  README.md  TensorBoard.ipynb  cli.py  graph_trainer.py  graphs_exp.py  images_exp.py  main.py  mol_exp.py  pyproject.toml  requirements.txt  valitidyTest.py
.run/: MNIST-Test.run.xml  MNIST-Train.run.xml  QM9-Test.run.xml  QM9-Train.run.xml  SBM-Test.run.xml  SBM-Train.run.xml
DataModules/: FashionMNISTDataModule.py  MNISTDataModule.py  MNISTSuperpixelDataModule.py  __init__.py
callbacks/: __init__.py  mol_callbacks.py  others.py  plot_callbacks.py
configs/CIFAR10/: debug.yaml  pretrained.yaml
configs/MNIST/: best_config.yaml  debug.yaml  experiments.yaml  old_v1.yaml  v1.yaml
configs/QM9/: best_config.yaml  debug.yaml
configs/SBM/: best_config.yaml  debug.yaml  experiments.yaml  v1.yaml  working_config.yaml
data_modules/: CIFAR10DataModule.py  MNISTDataModule.py  MNISTSuperpixelDataModule.py  QM9DataModule.py  SBMDataModule.py  __init__.py
ebm/: __init__.py  ebm.py
graph_logs/lightning_logs/version_0/: events.out.tfevents.1745169379.thesis.112842.0  hparams.yaml
graph_logs/lightning_logs/version_18/: events.out.tfevents.1744302272.thesis.110330.0
graph_logs/lightning_logs/version_19/: events.out.tfevents.1745223183.thesis.3014.0
graph_logs/lightning_logs/version_20/: events.out.tfevents.1745226359.thesis.16025.0  hparams.yaml
graph_logs/lightning_logs/version_21/: events.out.tfevents.1745486895.thesis.41618.0  hparams.yaml
graph_logs/lightning_logs/version_22/: events.out.tfevents.1745503959.thesis.139709.0
graph_logs/lightning_logs/version_23/: hparams.yaml
graph_logs/lightning_logs/version_24/: hparams.yaml
lightning_logs/version_0/: config.yaml  events.out.tfevents.1738162981.thesis.128577.0  events.out.tfevents.1739977357.thesis.250670.0  hparams.yaml
lightning_logs/version_0/checkpoints/: epoch=57-step=24882.ckpt  epoch=60-step=26169.ckpt
lightning_logs/version_1/: config.yaml  events.out.tfevents.1739212844.thesis.59467.0  events.out.tfevents.1739982142.thesis.265647.0
lightning_logs/version_1/checkpoints/: epoch=51-step=22308.ckpt  epoch=59-step=12840.ckpt
lightning_logs/version_2/: config.yaml  events.out.tfevents.1739275629.thesis.64179.0  events.out.tfevents.1741437260.thesis.10044.0  hparams.yaml
lightning_logs/version_2/checkpoints/: epoch=106-step=22898.ckpt  epoch=4-step=2145.ckpt
lightning_logs/version_3/: config.yaml  events.out.tfevents.1739290699.thesis.145190.0  events.out.tfevents.1741442122.thesis.33310.0  hparams.yaml
lightning_logs/version_4/: events.out.tfevents.1741447051.thesis.56106.0
lightning_logs/version_5/: config.yaml  events.out.tfevents.1739867905.thesis.10093.0  events.out.tfevents.1741449013.thesis.66397.0  hparams.yaml
lightning_logs/version_6/: config.yaml  events.out.tfevents.1741451159.thesis.77744.0
lightning_logs/version_7/: config.yaml  events.out.tfevents.1739885484.thesis.10777.0  events.out.tfevents.1741453278.thesis.89774.0  hparams.yaml
lightning_logs/version_8/: config.yaml  events.out.tfevents.1741621456.thesis.1464.0  hparams.yaml
metrics/: mol_metrics.py
models/: __init__.py  ebm.py  graph_models.py  images_models.py  immages_models.py
nn_models/: cnn.py  dgn.py  gcn.py  graph.py  graphs.py  hub.py  image.py  resnet.py  vit.py
notebooks/: AdjWithPos.ipynb  BasicTorchGeometricTutorial.ipynb  DenseData.ipynb  DenseDataset.ipynb  DenseTraining.ipynb  Generation.ipynb  Sampling.ipynb  SparseGIN.ipynb  TrainingExperiments.ipynb  graph_exploration.ipynb
notebooks/checkpoints/dense/: small_dense.pt
samplers/: __init__.py  base.py  graph_sampler.py  img_sampler.py  mol_sampler.py
saved_models/: epoch=4-step=1070.ckpt
tests/: test_qm9.py  test_validity.py
utils/: Callback.py  Sampler.py  __init.py  __init__.py  callbacks.py  data.py  graph.py  graph_plotting.py  graphs.py  mol.py  plot.py  qm9_utils.py  validity.py
(+28 files in other folders)
